--- a/css/custom.css
+++ b/css/custom.css
@@ -35,3 +35,7 @@ a {
   margin-right: 35px;
 }
 
+td:first-child.prog-cell {
+  padding: 12px 15px;
+  text-align: left;
+  border-bottom: 1px solid #E1E1E1; }
